manifests/media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - protocol: TCP
    name: "jellyfin"
    port: 8096
    targetPort: 8096
  type: ClusterIP
